Fix cookie notice spacing

--- a/css/responsiveness.css
+++ b/css/responsiveness.css
@@ -377,7 +377,7 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(14rem + 96px);
+		padding-top: calc(125px + 96px);
 	}
 }
 
@@ -391,7 +391,7 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(12rem + 96px);
+		padding-top: calc(142px + 96px);
 	}
 }
 
@@ -405,7 +405,7 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(12rem + 121px);
+		padding-top: calc(142px + 121px);
 	}
 }
 
@@ -419,7 +419,21 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(14rem + 141px);
+		padding-top: calc(142px + 141px);
+	}
+}
+
+@media (max-width: 767px) {
+	#cookie-notice .cookie-notice-visible {
+		height: 141px;
+	}
+
+	.cookies-not-set #nav {
+		top: 141px;
+	}
+
+	.cookies-not-set {
+		padding-top: calc(132px + 141px);
 	}
 }
 
@@ -433,7 +447,7 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(14rem + 161px);
+		padding-top: calc(132px + 161px);
 	}
 }
 
@@ -447,7 +461,7 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(14rem + 181px);
+		padding-top: calc(132px + 181px);
 	}
 }
 
@@ -461,6 +475,6 @@ Annoyingly different from Bootstrap! */
 	}
 
 	.cookies-not-set {
-		padding-top: calc(14rem + 201px);
+		padding-top: calc(132px + 201px);
 	}
 }
